app page update

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -230,7 +230,8 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="../image/promise.jpg" class="img-fluid" alt="">
+                   <img src="https://cdni.iconscout.com/illustration/free/thumb/business-agreement-2043012-1730199.png"
+                       class="img-fluid" alt="">
                 </div>
             </div>
         </div>
