--- a/pages/service.html
+++ b/pages/service.html
@@ -79,12 +79,12 @@
                         <div class="">
                             <h1>The most awesome <span style="color:#ff7a59">Website for grow up</span> your business
                             </h1>
-                            <a href="" class="btn common-button "> Get Started</a>
-                            <p>Top search terms for 3D illustrations</p>
+                            <a href="contact.html" class="btn common-button "> Get Started</a>
+                            <p>Services With Sarlex Technologies</p>
                             <div class="col">
-                                <a href="" class="btn common-button-sub "> Lets Talk's</a>
-                                <a href="" class="btn common-button-sub "> Lets Talk's</a>
-                                <a href="" class="btn common-button-sub "> Lets Talk's</a>
+                                <a href="" class="btn common-button-sub "> Analysis</a>
+                                <a href="" class="btn common-button-sub "> Design</a>
+                                <a href="" class="btn common-button-sub "> Development</a>
                             </div>
 
                         </div>
@@ -99,7 +99,7 @@
 
     <section class="service-card">
        <div class="container">
-           <h1>Handpicked & Curated 3D illustrations packs</h1>
+           <h1>Professional web design and development services</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card h-100 " style="background: hsl(0, 100%, 90%); border-radius: 15px;">
@@ -108,8 +108,8 @@
                                 class="card-img-top" alt="...">
                    </div>
                         <div class="card-body " style="background:rgb(250, 158, 158);">
-                            <h2 class="card-title">Mobile Apps Development</h2>
-                              <a href="" class="btn common-button-sub d-block " > Learn More</a>
+                            <h2 class="card-title"> Apps Development</h2>
+                              <a href="service/mobile-app.html" class="btn common-button-sub d-block " > Learn More</a>
                           
                         </div>
                         
@@ -123,7 +123,7 @@
                         </div>
                         <div class="card-body " style="background:#FAC19E;">
                             <h2 class="card-title">Web Development</h2>
-                            <a href="../pages/web-development.html" class="btn common-button-sub d-block "> Learn More</a>
+                            <a href="service/web-development.html" class="btn common-button-sub d-block "> Learn More</a>
 
                         </div>
 
@@ -136,7 +136,7 @@
                                 class="card-img-top" alt="...">
                         </div>
                         <div class="card-body " style="background:#9EEDFA;">
-                            <h2 class="card-title">Mobile Apps Development</h2>
+                            <h2 class="card-title">UI/UX Design</h2>
                             <a href="../pages/web-development.html" class="btn common-button-sub d-block "> Learn
                                 More</a>
 
@@ -151,7 +151,7 @@
                                 class="card-img-top" alt="...">
                         </div>
                         <div class="card-body " style="background:#FA9ECC">
-                            <h2 class="card-title">Mobile Apps Development</h2>
+                            <h2 class="card-title">CMS</h2>
                             <a href="../pages/web-development.html" class="btn common-button-sub d-block "> Learn
                                 More</a>
 
@@ -166,7 +166,7 @@
                                 class="card-img-top" alt="...">
                         </div>
                         <div class="card-body " style="background:#9EEDFA;">
-                            <h2 class="card-title">Mobile Apps Development</h2>
+                            <h2 class="card-title">Social Media</h2>
                             <a href="../pages/web-development.html" class="btn common-button-sub d-block "> Learn
                                 More</a>
 
@@ -228,7 +228,8 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="../image/promise.jpg" class="img-fluid" alt="">
+                    <img src="https://cdni.iconscout.com/illustration/free/thumb/business-agreement-2043012-1730199.png"
+                        class="img-fluid" alt="">
                 </div>
             </div>
         </div>
