--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -134,10 +134,10 @@
                 <div class="col">
                     <div class="card h-100 " style="background: hsl(0, 100%, 90%); border-radius: 15px;">
                         <div class="card-header">
-                            <img src="../image/web-1.png" class="card-img-top" alt="...">
+                            <img src="../image/web-3.jpg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body " style="background:rgb(250, 158, 158);">
-                            <h2 class="card-title">React Website</h2>
+                            <h2 class="card-title">Education Website</h2>
                             <a href="https://www.polystarter.net/" target="_blank"
                                 class="btn common-button-sub d-block "> View Website</a>
 
