--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <!-- the nav bar start here -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/">
                     <div class="logo">
-                        <img src="image/sarlex_fabicon.png" alt="">
+                        <img src="image/logonav.png" alt="">
                     </div>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
