--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -29,7 +29,7 @@
              <div class="container">
                  <a class="navbar-brand" href="#">
                      <div class="logo">
-                         <img src="image/sarlex_fabicon.png" alt="">
+                         <img src="../image/logonav.png" alt="">
                      </div>
                  </a>
                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -138,7 +138,7 @@
                         </div>
                         <div class="card-body " style="background:rgb(250, 158, 158);">
                             <h2 class="card-title">Education Website</h2>
-                            <a href="https://www.polystarter.net/" target="_blank"
+                            <a href="https://kindergerden.netlify.app/" target="_blank"
                                 class="btn common-button-sub d-block "> View Website</a>
 
                         </div>
@@ -148,11 +148,11 @@
                 <div class="col">
                     <div class="card h-100 " style="background: #FFDFCC; border-radius: 15px;">
                         <div class="card-header">
-                            <img src="../image/web-2.png" class="card-img-top" alt="...">
+                            <img src="../image/web-4.jpg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body " style="background:#FAC19E;">
-                            <h2 class="card-title">Restaurant management</h2>
-                            <a href="https://www.platinumsushi.fr/fr/" target="_blank"
+                            <h2 class="card-title">Travelling Website</h2>
+                            <a href="https://holidaydeals.site/" target="_blank"
                                 class="btn common-button-sub d-block "> View Website
                             </a>
 
