--- a/pages/service/web-development.html
+++ b/pages/service/web-development.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="../../slick/slick-theme.css" />
 
 
-    <link rel="icon" href="../../image/sarlex_fabicon.png" type="">
+    <link rel="icon" href="../../image/logonav.png" type="">
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
