--- a/pages/service/mobile-app.html
+++ b/pages/service/mobile-app.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <div class="logo">
-                        <img src="../../image/sarlex_fabicon.png" alt="">
+                        <img src="../../image/logonav.png" alt="">
                     </div>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
