--- a/pages/service/web-development.html
+++ b/pages/service/web-development.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="../../slick/slick-theme.css" />
 
 
-    <link rel="icon" href="../../image/logonav.png" type="">
+    <link rel="icon" href="../../image/sarlex_fabicon.png" type="">
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
@@ -30,7 +30,7 @@
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <div class="logo">
-                        <img src="../../image/sarlex_fabicon.png" alt="">
+                        <img src="../../image/logonav.png" alt="">
                     </div>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
