web development page update

--- a/pages/service/web-development.html
+++ b/pages/service/web-development.html
@@ -85,9 +85,9 @@
                     <a href="" class="btn common-button "> Get Started</a>
                     <p>Web and Mobile Software Development Services</p>
                     <div class="col">
-                        <a href="" class="btn common-button-sub mt-2"> Lets Talk's</a>
-                        <a href="" class="btn common-button-sub mt-2"> Lets Talk's</a>
-                        <a href="" class="btn common-button-sub mt-2"> Lets Talk's</a>
+                        <a href="" class="btn common-button-sub mt-2"> CODE</a>
+                        <a href="" class="btn common-button-sub mt-2"> BUILD</a>
+                        <a href="" class="btn common-button-sub mt-2"> TEST</a>
                     </div>
 
                 </div>
@@ -117,7 +117,9 @@
                     <div class="col">
                         <div class="card">
                             <div class="icon">
-                                <i class="fas fa-tv  icon-1"></i>
+                                <img src="https://cdn.iconscout.com/icon/premium/png-64-thumb/web-development-2626163-2178479.png"
+                                    alt="">
+                                <!-- <i class="fas fa-tv  icon-1"></i> -->
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Responsive web</h5>
@@ -128,7 +130,9 @@
                     <div class="col">
                         <div class="card">
                             <div class="icon">
-                                <i class="fas fa-tv  icon-2"></i>
+                                <img src="https://cdn.iconscout.com/icon/premium/png-64-thumb/web-development-1404151-1186623.png"
+                                    alt="">
+                                <!-- <i class="fas fa-tv  icon-2"></i> -->
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Responsive web</h5>
@@ -139,7 +143,9 @@
                     <div class="col">
                         <div class="card">
                             <div class="icon">
-                                <i class="fas fa-tv  icon-3"></i>
+                                <img src="https://cdn.iconscout.com/icon/premium/png-64-thumb/web-development-2584014-2154754.png"
+                                    alt="">
+                                <!-- <i class="fas fa-tv  icon-3"></i> -->
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Responsive web</h5>
@@ -150,7 +156,9 @@
                     <div class="col">
                         <div class="card">
                             <div class="icon">
-                                <i class="fas fa-medal icon-4"></i>
+                                <img src="https://cdn.iconscout.com/icon/premium/png-64-thumb/web-development-2456970-2077652.png"
+                                    alt="">
+                                <!-- <i class="fas fa-medal icon-4"></i> -->
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Responsive web</h5>
@@ -170,46 +178,62 @@
 
 <section class="web-develop-content">
     <div class="container">
-        <h1>Hire Software/Web Developer</h1>
+        <h1>Web Development</h1>
 
         <div class="row">
+            <div class="col">
+                <!-- <h2>Web Development</h2> -->
+                <p>A website help you to grow your business. Not only grow your business it also help you to promote you
+                    or your contents. Also you can earn money with your blog website by showing ads to your audience.
+                    You can sell your products online using an ecommerce website. Online tools like image compressing,
+                    image resizing and many other tools are possible to have with a website. Many other things like shop
+                    management, restaurant management and many other things are possible with an website. </p>
+                    <p>SarLex Technologies are providing high quality web development services since we have started our
+                        company. There websites are helping peoples to grow in financial ways. 99% clients are 100%
+                        satisfied with our web development services. SarLex Technologies have a great web designers
+                        community. Our web developers have a rich knowledge about web design and development. We use
+                        latest technologies to design and build websites. So what you are waiting for? Contact us today
+                        and your get first website from us.</p>
+                        <p>The web developers of SarLex Technologies always use latest technologies to design or develop
+                            websites. Currently we are using html, css, bootstrap, JavaScript, jQuery, react js to build
+                            the front end user interface and we use Laravel or NodeJs to build the back end of a
+                            website. For database we are using mySQL or mongoDB. SarLex Technologies also have a
+                            WordPress CMS developers group. We also use Shopify CMS.</p>
+              
+            </div>
+         
+        </div>
+        <div class="row">
             <div class="col-md-6">
-                <h2>Web Development</h2>
-                <p>Being a leading website application development company, our certified developers have unparalleled
-                    expertise in working with the latest web technologies to deliver custom web solutions. Whether
-                    creating
-                    a web presence for your company, an information hub for your business or empowering your apps/IoT
-                    devices through backend- IndiaNIC does it all by covering a wide spectrum of web solutions and
-                    framework.</p>
+                <h2>React Js</h2>
+                <p>SarLex Technologies have a high experienced ReactJs developer team. Our ReactJs developers have a
+                    great idea of designing. They knows properly how to build a charming UI. They always provide error
+                    free code with perfect alignment. Our reactjs team manager always check every files and then submit
+                    the file to a client.</p>
 
-                <div class="row">
-                    <div class="col-6">
-                        <ul>
-                            <li><a href="">Custom Website Development</a></li>
-                            <li><a href="">eCommerce Store Development</a></li>
-                            <li><a href="">Full-Stack Development</a></li>
-                            <li><a href="">Progressive Web Apps</a></li>
+                    <h2>Laravel</h2>
+                    <p>Laravel is the greatest back end technology tool for websites. As well as it is the most most
+                        popular back end technology. Our Laravel developers has made a great success with their skills.
+                        They have gained our clients satisfaction and claimed a great position on our company. They have
+                        the proper ability to build websites as per your requirements.</p>
 
-                        </ul>
-                    </div>
-                    <div class="col-6">
-                        <ul>
-                            <li><a href="">Custom Website Development</a></li>
-                            <li><a href="">eCommerce Store Development</a></li>
-                            <li><a href="">Full-Stack Development</a></li>
-                            <li><a href="">Progressive Web Apps</a></li>
-
-                        </ul>
-                    </div>
-                </div>
+                        <h2>WordPress</h2>
+                        <p>Wordpress is the most popular CMS all over the word. 67% websites from all over the world are
+                            build with wordpress. We have a huge team for wordpress development. The wordpress
+                            developers of SarLex Technologies have a great experience in theme customization and plugin
+                            customization. Our wordpress developers have a high knowledge about plugins and theme.
+                            SarLex Technologies use woocommerce plugin to build wordpress ecommerce website.</p>
             </div>
             <div class="col-md-6 d-flex align-items-center ">
-                <img src="https://cdni.iconscout.com/illustration/premium/thumb/web-development-3817577-3181531.png"
-                    class="img-fluid" alt="">
+                <!-- <img src="https://cdni.iconscout.com/illustration/premium/thumb/web-development-3817577-3181531.png"
+                    class="img-fluid" alt=""> -->
+                     <img src="https://cdni.iconscout.com/illustration/premium/thumb/web-development-3728208-3139600.png"
+                         class="img-fluid" alt="">
             </div>
         </div>
     </div>
 </section>
+
 
 
 
