--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000">
+                <div class="col-md-6" data-aos="zoom-in" data-aos-duration="2000">
                     <!-- <img src="image/home-page-banner-img.svg" alt=""> -->
 
                     <img src="https://cdni.iconscout.com/illustration/premium/thumb/website-developer-3141876-2631147.png"
@@ -104,7 +104,7 @@
                 the job.</p>
             <div class="col mt-5">
                 <a href="/pages/about.html">
-                    <button class="btn common-button mx-5 mb-2">About</button>
+                    <button class="btn common-button mb-2">About</button>
                 </a>
                 <a href="/pages/contact.html">
                     <button class="btn common-button-outline">Contact</button>
@@ -450,7 +450,7 @@
                     <div class="comment-head">
                         <div class="row d-flex ">
                             <div class="col-2  "><i class="fas fa-quote-left"></i></div>
-                            <div class="col-10 p-0 mt-3">
+                            <div class="col-10 mt-3">
                                 <p>Sarit393 was very easy to work with and he had lots of patience with me as I don’t
                                     know a lot about websites. Great communication and he delivered exactly what I
                                     requested. Will definitely use again for future projects! </p>
@@ -473,7 +473,7 @@
                     <div class="comment-head">
                         <div class="row d-flex ">
                             <div class="col-2  "><i class="fas fa-quote-left"></i></div>
-                            <div class="col-10 p-0 mt-3">
+                            <div class="col-10  mt-3">
                                 <p>They helped us with full cooperation. True professionals. Also worked extra for my
                                     special request. </p>
                             </div>
@@ -495,7 +495,7 @@
                        <div class="comment-head">
                            <div class="row d-flex ">
                                <div class="col-2  "><i class="fas fa-quote-left"></i></div>
-                               <div class="col-10 p-0 mt-3">
+                               <div class="col-10 mt-3">
                                    <p>it was a great experience working with Sarit393. He delivered above and beyond and
                                        before the expected time of delivery. He communicated very well, communication
                                        line was always open. I used screenshots as an additional tool for illustrations
@@ -520,7 +520,7 @@
                        <div class="comment-head">
                            <div class="row d-flex ">
                                <div class="col-2  "><i class="fas fa-quote-left"></i></div>
-                               <div class="col-10 p-0 mt-3">
+                               <div class="col-10  mt-3">
                                    <p>Fantastic Seller! A+++ Did a great job, was a pleasure to communicate with and
                                        delivered on time. Reliable and professional. </p>
                                </div>
@@ -542,7 +542,7 @@
                     <div class="comment-head">
                         <div class="row d-flex ">
                             <div class="col-2  "><i class="fas fa-quote-left"></i></div>
-                            <div class="col-10 p-0 mt-3">
+                            <div class="col-10  mt-3">
                                 <p>Seller was great to work with. Seller understood the requirements very well and went
                                     above and beyond to accommodate all requests. I would highly encourage my contacts
                                     to work with seller for website development related needs. Seller has a good and
@@ -570,7 +570,7 @@
                     <div class="comment-head">
                         <div class="row d-flex ">
                             <div class="col-2  "><i class="fas fa-quote-left"></i></div>
-                            <div class="col-10 p-0 mt-3">
+                            <div class="col-10  mt-3">
                                 <p>Absolutely amazing people! Worked extremely hard and delivered my product in less
                                     than 10 days! Other Freelancers tripled their price and half their efficiency. Just
                                     a group of amazing and talented developers! </p>
