--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css" />
 
 
-    <link rel="icon" href="../image/logo-bg.png" type="../image/png">
+    <link rel="icon" href="../image/sarlex_fabicon.png" alt="Sarlex Technologies" type="../image/png">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
@@ -33,7 +33,7 @@
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                   aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span><img src="image/menu.svg" alt=""></span>
+                  <span><img src="../image/menu.svg" alt=""></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ms-auto text-center align-items-center">
@@ -105,7 +105,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <img src="https://cdni.iconscout.com/illustration/premium/thumb/job-experience-certificate-4089585-3384075.png"
-                        alt="">
+                       class="img-fluid" alt="">
                 </div>
                 <div class="col-md-6 ">
                     <h2>Our Experience.</h2>
