--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css" />
 
 
-    <link rel="icon" href="../image/logo.png" type="../image/png">
+    <link rel="icon" href="../image/sarlex_fabicon.png" alt="Sarlex Technologies" type="../image/png">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
@@ -34,7 +34,7 @@
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span><img src="image/menu.svg" alt=""></span>
+                    <span><img src="../image/menu.svg" alt=""></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto text-center align-items-center">
