--- a/pages/service/web-development.html
+++ b/pages/service/web-development.html
@@ -109,7 +109,8 @@
             </div>
             <div class="col-md-6 ">
                 <h2>Best Elements Designs.</h2>
-                <p>Serlex is a top website design and web development company in India & USA delivering the best
+                <p>SarLex Technologies is a top website design and web development company in India & USA delivering the
+                    best
                     web development services to craft bespoke websites, web applications, web-tools, etc. to global
                     businesses and startups with 100% project delivery.
                 </p>
@@ -122,7 +123,7 @@
                                 <!-- <i class="fas fa-tv  icon-1"></i> -->
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Responsive web</h5>
+                                <h5 class="card-title">Coding</h5>
 
                             </div>
                         </div>
@@ -135,7 +136,7 @@
                                 <!-- <i class="fas fa-tv  icon-2"></i> -->
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Responsive web</h5>
+                                <h5 class="card-title">Development</h5>
 
                             </div>
                         </div>
