--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -34,7 +34,7 @@
                  </a>
                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                     <span><img src="image/menu.svg" alt=""></span>
+                     <span><img src="../image/menu.svg" alt=""></span>
                  </button>
                  <div class="collapse navbar-collapse" id="navbarNav">
                      <ul class="navbar-nav ms-auto text-center align-items-center">
