about page update

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                         <li class="nav-item">
                             <a class="" href="pages/portfolio.html">Portfolio</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="" href="pages/">Profiles</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="" href="pages/about.html">About Us</a>
                         </li>
@@ -164,7 +164,7 @@
             <div class="services">
                 <div>
                     <div class="card">
-                        <img src="image/services-devops.svg" class="card-img-top" alt="sarlex">
+                        <img src="image/services-devops.svg" class="card-img-top" alt="sarlex technologies">
                         <div class="card-body">
                             <h5 class="card-title">Software Development</h5>
                             <p class="card-text">Software development is the process of conceiving, specifying,
@@ -178,7 +178,7 @@
                 </div>
                 <div>
                     <div class="card">
-                        <img src="image/services-ui-ux.svg" class="card-img-top" alt="sarlex">
+                        <img src="image/services-ui-ux.svg" class="card-img-top" alt="sarlex technologies">
                         <div class="card-body">
                             <h5 class="card-title">UX/UI Design</h5>
                             <p class="card-text">You need a UI/ UX designer to enhance your designing idea to your
@@ -205,7 +205,7 @@
                 </div>
                 <div>
                     <div class="card">
-                        <img src="image/hire-dedicated-developer.svg" class="card-img-top" alt="sarlex">
+                        <img src="image/hire-dedicated-developer.svg" class="card-img-top" alt="sarlex technologies">
                         <div class="card-body">
                             <h5 class="card-title">hire-dedicated-developers</h5>
                             <p class="card-text">Create your own team of developers for your software development
@@ -218,7 +218,7 @@
                 </div>
                 <div>
                     <div class="card">
-                        <img src="image/services-web-development.svg" class="card-img-top" alt="sarlex">
+                        <img src="image/services-web-development.svg" class="card-img-top" alt="sarlex technologies">
                         <div class="card-body">
                             <h5 class="card-title">Web Development</h5>
                             <p class="card-text">We offer best quality websites to our clients. 98% of our clients are
@@ -403,7 +403,7 @@
     <section class="video-intro">
         <div class="container">
             <h1>Hire the Best Web and Mobile App Developers</h1>
-            <p>SARLEX has been the best web development company I have worked with. They have met or exceeded my
+            <p>SARLEX Technologies has been the best web development company I have worked with. They have met or exceeded my
                 expectations
                 on every project… They have allowed me to bring all of my projects together under one roof and begin to
                 develop an integrated product and code base that can be leveraged across all of my existing and
@@ -451,7 +451,7 @@
                         <div class="row d-flex ">
                             <div class="col-2  "><i class="fas fa-quote-left"></i></div>
                             <div class="col-10 mt-3">
-                                <p>Sarit393 was very easy to work with and he had lots of patience with me as I don’t
+                                <p>Sarlex Technologies was very easy to work with and he had lots of patience with me as I don’t
                                     know a lot about websites. Great communication and he delivered exactly what I
                                     requested. Will definitely use again for future projects! </p>
                             </div>
@@ -496,7 +496,7 @@
                            <div class="row d-flex ">
                                <div class="col-2  "><i class="fas fa-quote-left"></i></div>
                                <div class="col-10 mt-3">
-                                   <p>it was a great experience working with Sarit393. He delivered above and beyond and
+                                   <p>It was a great experience working with Sarlex Technologies. He delivered above and beyond and
                                        before the expected time of delivery. He communicated very well, communication
                                        line was always open. I used screenshots as an additional tool for illustrations
                                        and communication, I will surely come back for more and will strongly recommend
@@ -596,7 +596,7 @@
                         <div class="row d-flex ">
                             <div class="col-2  "><i class="fas fa-quote-left"></i></div>
                             <div class="col-10 p-0 mt-3">
-                                <p>all the work was exactly as requested, this team even went out of the way to fix
+                                <p>All the work was exactly as requested, this team even went out of the way to fix
                                     issues, recommended! </p>
                             </div>
                         </div>
