--- a/pages/about.html
+++ b/pages/about.html
@@ -46,9 +46,9 @@
                       <li class="nav-item">
                           <a class="" href="pages/">Portfolio</a>
                       </li>
-                      <li class="nav-item">
+                      <!-- <li class="nav-item">
                           <a class="" href="pages/">Profiles</a>
-                      </li>
+                      </li> -->
                       <li class="nav-item">
                           <a class="" href="about.html">About Us</a>
                       </li>
@@ -201,9 +201,9 @@
    <div class="row">
        <div class="col-md-3">
                 <div class="profile-view">
-                    <img src="../image/client-5.jpg_background=000000&cropX1=206&cropX2=2043&cropY1=250&cropY2=2089" alt="Avatar" class="image" style="width:100%">
+                    <img src="../image/team/sahir.jpg" alt="Avatar" class="image" style="width:100%">
                     <div class="middle">
-                        <div class="text">John Doe</div>
+                        <div class="text">Syed Sahir</div>
                      <i class="fab fa-facebook-f"></i>
                        <i class="fab fa-twitter"></i>
                      <i class="fab fa-facebook-messenger"></i>
@@ -212,9 +212,9 @@
        </div>
           <div class="col-md-3">
               <div class="profile-view">
-                  <img src="../image/client-2.jpeg" alt="Avatar" class="image" style="width:100%">
+                  <img src="../image/team/rakib.jpg" alt="Avatar" class="image" style="width:100%">
                   <div class="middle">
-                      <div class="text">John Doe</div>
+                      <div class="text">Rakib</div>
                   <i class="fab fa-facebook-f"></i>
                   <i class="fab fa-twitter"></i>
                     <i class="fab fa-facebook-messenger"></i>
@@ -223,9 +223,9 @@
           </div>
           <div class="col-md-3">
               <div class="profile-view">
-                  <img src="../image/client-4.jpg" alt="Avatar" class="image" style="width:100%">
+                  <img src="../image/team/arif.png" alt="Avatar" class="image" style="width:100%">
                   <div class="middle">
-                      <div class="text">John Doe</div>
+                      <div class="text"> Arif Rabbani </div>
                 <i class="fab fa-facebook-f"></i>
                   <i class="fab fa-twitter"></i>
                    <i class="fab fa-facebook-messenger"></i>
@@ -234,9 +234,9 @@
           </div>
           <div class="col-md-3">
               <div class="profile-view">
-                  <img src="../image/client-1.jpg" alt="Avatar" class="image" style="width:100%">
+                  <img src="../image/team/sourov.jpg" alt="Avatar" class="image" style="width:100%">
                   <div class="middle">
-                      <div class="text">John Doe</div>
+                      <div class="text">Sourov Ahmed</div>
             <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-twitter"></i>
 <i class="fab fa-facebook-messenger"></i>
