--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -47,9 +47,9 @@
                          <li class="nav-item">
                              <a class="" href="portfolio.html">Portfolio</a>
                          </li>
-                         <li class="nav-item">
+                         <!-- <li class="nav-item">
                              <a class="" href="profiles">Profiles</a>
-                         </li>
+                         </li> -->
                          <li class="nav-item">
                              <a class="" href="about.html">About Us</a>
                          </li>
