--- a/pages/service/web-development.html
+++ b/pages/service/web-development.html
@@ -48,9 +48,9 @@
                         <li class="nav-item">
                             <a class="" href="../portfolio.html">Portfolio</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="" href="../profiles">Profiles</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="" href="../about.html">About Us</a>
                         </li>
